--- a/pages/testAndTools/test.html
+++ b/pages/testAndTools/test.html
@@ -52,8 +52,7 @@
     </div>
 
     <div class="section">
-        <h2>📥 استيراد قواعد بيانات</h2>
-        <p>اختر ملف ZIP يحتوي على قواعد بيانات لاستيرادها:</p>
+        <label for="fileInput">📥 استيراد قواعد بيانات</label>
         <input type="file" accept=".zip" onchange="importMultipleDatabasesFromFile(this.files[0])">
     </div>
 
