--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
           " />
       <span id="t_633"></span>
     </button>
+        <button onclick="showSection('pands')">
+      <img id="i_items" alt="pands" style="
+            width: 20px;
+            height: 20px;
+            vertical-align: middle;
+            margin-left: 5px;
+          " />
+      <span id="t_633"></span>
+    </button>
   </nav>
 
   <!-- ✅ الأقسام (تظهر حسب القسم المختار) -->
