--- a/pages/selectedPand/selectedPand.html
+++ b/pages/selectedPand/selectedPand.html
@@ -52,7 +52,7 @@
 </script>
 
 <div id="mainSelectedPandPage">
-<textarea id="pandText"></textarea>
+<textarea id="pandText" style="min-width: 90%; height: 200px; resize: vertical; padding: 10px; border: 1px solid #ccc; border-radius: 5px; margin-bottom: 20px;"></textarea>
 </div>
 <br>
 <table>
