--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="/BidStory/code/lang/imageAndLang.js"></script>
     <script src="/BidStory/js/dataBase/dbManager.js"></script>
     <script src="/BidStory/js/table/table.js"></script>
+        <script src="/BidStory/js/print.js"></script>
     <link rel="stylesheet" href="/BidStory/css/table.css" />
     <script src="/BidStory/code/lang/taf.js"></script>
 
@@ -37,6 +38,7 @@
 
     <!-- ✅ مكتبة ExcelJS - لإنشاء وتعديل ملفات Excel -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/exceljs/4.3.0/exceljs.min.js"></script>
+
 
     <!-- ✅ مكتبة FileSaver.js - لحفظ الملفات محليًا على الجهاز -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
