--- a/pages/projects/print.html
+++ b/pages/projects/print.html
@@ -1,7 +1,7 @@
 <select id="actionSelector" onchange="handleSelection(this.value)">
     <option value="">-- اختر من القائمة --</option>
     <option id="t_1276" value="1"></option>
-    <option value="2">📥 استيراد البيانات</option>
+    <option id="t_481" value="2"></option>
     <option value="3">🗑️ حذف البيانات</option>
 </select>
 <br>
@@ -51,15 +51,17 @@
         switch ( value )
         {
             case "1":
-                const res =await estimateOperations.execute();
+                const res = await estimateOperations.execute();
                 TableRenderer.renderTable( res, [ pandRaqm, pandDiscription, pandUnit, Quantity, Price, Total ], 'Estimate', useArabic );
 
                 break;
             case "2":
-                importData();
+  const res_ = await awardOperations.execute();
+                TableRenderer.renderTable( res_, [ pandRaqm, pandDiscription, pandUnit, Quantity, Price, Total ], 'Estimate', useArabic );
+
                 break;
             case "3":
-                deleteData();
+
                 break;
             default:
                 console.log( "ℹ️ لا يوجد خيار محدد" );
@@ -67,80 +69,186 @@
     }
 
     //امر طباعه المشروع
-const estimateOperations = {
-    // دالة جلب البيانات
-    getEstimateData: async function () {
-        const result = await Promise.all(
-            allProcessData.items.map(async (item) => {
-                try {
-                    const db = new noUpgrade('ite_' + selectedProject);
-                    const rows = await db.getAllDataFromTable(item);
-                    const entry = Object.fromEntries(rows.map(({ key, value }) => [key, value]));
+    const estimateOperations = {
+        // دالة جلب البيانات
+        getEstimateData: async function ()
+        {
+            let sumation = 0; // Local variable for this operation
 
-                    return {
-                        numbering: entry.numbering || '',
-                        pandText: entry.pandText || '',
-                        UnitPand: getUnitByCIndex(entry.UnitPand, langSelectList0) || '',
-                        kmia: Number(entry.kmia) || 0,
-                        sear: Number(entry.sear) || 0,
-                        tot: Number(entry.tot) || 0
-                    };
-                } catch (err) {
-                    console.error(`❌ خطأ أثناء قراءة بيانات ${item}:`, err);
-                    return null;
-                }
-            })
-        );
-        return result.filter(Boolean);
-    },
+            const result = await Promise.all(
+                allProcessData.items.map( async ( item ) =>
+                {
+                    try
+                    {
+                        const db = new noUpgrade( 'ite_' + selectedProject );
+                        const rows = await db.getAllDataFromTable( item );
+                        const entry = Object.fromEntries( rows.map( ( { key, value } ) => [ key, value ] ) );
 
-    // دالة إضافة عنصر جديد
-    addEstimateItem: function (estimateList, newItem) {
-        if (!newItem || typeof newItem !== 'object') {
-            console.warn("⚠️ عنصر غير صالح للإضافة:", newItem);
-            return estimateList;
+                        sumation += Number( entry.tot ) || 0;
+
+                        return {
+                            numbering: entry.numbering || '',
+                            pandText: entry.pandText || '',
+                            UnitPand: getUnitByCIndex( entry.UnitPand, langSelectList0 ) || '',
+                            kmia: Number( entry.kmia ) || 0,
+                            sear: Number( entry.sear ) || 0,
+                            tot: Number( entry.tot ) || 0
+                        };
+                    } catch ( err )
+                    {
+                        console.error( `❌ خطأ أثناء قراءة بيانات ${ item }:`, err );
+                        return null;
+                    }
+                } )
+            );
+
+            return {
+                list: result.filter( Boolean ),
+                total: sumation
+            };
+        },
+
+        // دالة إضافة عنصر جديد
+        addEstimateItem: function ( estimateList, newItem )
+        {
+            if ( !newItem || typeof newItem !== 'object' )
+            {
+                console.warn( "⚠️ عنصر غير صالح للإضافة:", newItem );
+                return estimateList;
+            }
+
+            const requiredKeys = [ 'numbering', 'pandText', 'UnitPand', 'kmia', 'sear', 'tot' ];
+            const hasAllKeys = requiredKeys.every( key => key in newItem );
+
+            if ( !hasAllKeys )
+            {
+                console.warn( "⚠️ العنصر الجديد لا يحتوي على كل المفاتيح المطلوبة:", newItem );
+                return estimateList;
+            }
+
+            // تأكد أن الأرقام أرقام فعلية
+            newItem.kmia = Number( newItem.kmia ) || 0;
+            newItem.sear = Number( newItem.sear ) || 0;
+            newItem.tot = Number( newItem.tot ) || 0;
+
+            return [ ...estimateList, newItem ];
+        },
+
+        // الدالة الرئيسية - يمكن تمرير عنصر جديد مخصص
+        execute: async function ( customNewItem = null )
+        {
+            const { list: originalList, total } = await this.getEstimateData();
+
+            const defaultItem = {
+                numbering: '-',
+                pandText: amount2words( total, 50 ),
+                UnitPand: '',
+                kmia: 0,
+                sear: 0,
+                tot: total // Use the calculated total
+            };
+
+            const newItem = customNewItem || defaultItem;
+            const updatedList = this.addEstimateItem( originalList, newItem );
+
+            console.log( "📦 القائمة بعد الإضافة:", updatedList );
+            return updatedList;
         }
+    };
 
-        const requiredKeys = ['numbering', 'pandText', 'UnitPand', 'kmia', 'sear', 'tot'];
-        const hasAllKeys = requiredKeys.every(key => key in newItem);
 
-        if (!hasAllKeys) {
-            console.warn("⚠️ العنصر الجديد لا يحتوي على كل المفاتيح المطلوبة:", newItem);
-            return estimateList;
+
+    //امر طباعه الاسناد
+    const awardOperations = {
+        // دالة جلب البيانات
+        getEstimateData: async function ()
+        {
+            let sumation = 0; // Local variable for this operation
+
+            const result = await Promise.all(
+                allProcessData.items.map( async ( item ) =>
+                {
+                    try
+                    {
+                        const db = new noUpgrade( 'ite_' + selectedProject );
+                        const rows = await db.getAllDataFromTable( item );
+                        const entry = Object.fromEntries( rows.map( ( { key, value } ) => [ key, value ] ) );
+
+                        const db_contractor = new noUpgrade( 'contractor' );
+                        const rows_contractor = await db_contractor.getAllDataFromTable( item );
+                        const entry_contractor = Object.fromEntries( rows_contractor.map( ( { key, value } ) => [ key, value ] ) );
+
+                        sumation += Number( entry_contractor.tot_contractor ) || 0;
+
+                        return {
+                            numbering: entry.numbering || '',
+                            pandText: entry.pandText || '',
+                            UnitPand: getUnitByCIndex( entry.UnitPand, langSelectList0 ) || '',
+                            kmia: Number( entry.kmia ) || 0,
+                            sear: Number( entry_contractor.sear_contractor ) || 0,
+                            tot: Number( entry_contractor.tot_contractor ) || 0
+                        };
+                    } catch ( err )
+                    {
+                        console.error( `❌ خطأ أثناء قراءة بيانات ${ item }:`, err );
+                        return null;
+                    }
+                } )
+            );
+
+            return {
+                list: result.filter( Boolean ),
+                total: sumation
+            };
+        },
+
+        // دالة إضافة عنصر جديد
+        addEstimateItem: function ( estimateList, newItem )
+        {
+            if ( !newItem || typeof newItem !== 'object' )
+            {
+                console.warn( "⚠️ عنصر غير صالح للإضافة:", newItem );
+                return estimateList;
+            }
+
+            const requiredKeys = [ 'numbering', 'pandText', 'UnitPand', 'kmia', 'sear', 'tot' ];
+            const hasAllKeys = requiredKeys.every( key => key in newItem );
+
+            if ( !hasAllKeys )
+            {
+                console.warn( "⚠️ العنصر الجديد لا يحتوي على كل المفاتيح المطلوبة:", newItem );
+                return estimateList;
+            }
+
+            // تأكد أن الأرقام أرقام فعلية
+            newItem.kmia = Number( newItem.kmia ) || 0;
+            newItem.sear = Number( newItem.sear ) || 0;
+            newItem.tot = Number( newItem.tot ) || 0;
+
+            return [ ...estimateList, newItem ];
+        },
+
+        // الدالة الرئيسية - يمكن تمرير عنصر جديد مخصص
+        execute: async function ( customNewItem = null )
+        {
+            const { list: originalList, total } = await this.getEstimateData();
+
+            const defaultItem = {
+                numbering: '-',
+                pandText: amount2words( total, 50 ),
+                UnitPand: '',
+                kmia: 0,
+                sear: 0,
+                tot: total // Use the calculated total
+            };
+
+            const newItem = customNewItem || defaultItem;
+            const updatedList = this.addEstimateItem( originalList, newItem );
+
+            console.log( "📦 القائمة بعد الإضافة:", updatedList );
+            return updatedList;
         }
-
-        // تأكد أن الأرقام أرقام فعلية
-        newItem.kmia = Number(newItem.kmia) || 0;
-        newItem.sear = Number(newItem.sear) || 0;
-        newItem.tot = Number(newItem.tot) || 0;
-
-        return [...estimateList, newItem];
-    },
-
-    // الدالة الرئيسية - يمكن تمرير عنصر جديد مخصص
-    execute: async function (customNewItem = null) {
-        const originalList = await this.getEstimateData();
-
-        const defaultItem = {
-            numbering: '-',
-            pandText: 'تفاصيل البند الجديد',
-            UnitPand: '',
-            kmia: 0,
-            sear: 0,
-            tot: 2000
-        };
-
-        const newItem = customNewItem || defaultItem;
-        const updatedList = this.addEstimateItem(originalList, newItem);
-
-        console.log("📦 القائمة بعد الإضافة:", updatedList);
-        return updatedList;
-    }
-};
-
-// كيفية الاستدعاء لاحقاً:
-// estimateOperations.execute();
-
+    };
 
 
 
